# ReeYin

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Directory.Build.props  README.md  ReeYin.sln  nuget.config
Algorithm/: AGENTS.md
Algorithm/ALGO.CalibrationNative/: ALGO.CalibrationNative.vcxproj  ALGO.CalibrationNative.vcxproj.filters
Algorithm/ALGO.DeepLearningNative/: ALGO.DeepLearningNative.vcxproj  ALGO.DeepLearningNative.vcxproj.filters
Algorithm/ALGO.EncryptionNative/: ALGO.EncryptionNative.vcxproj  ALGO.EncryptionNative.vcxproj.filters  CMakeLists.txt
Algorithm/ALGO.EncryptionNative/src/: framework.h  import_lib.cpp
Algorithm/ALGO.EncryptionNative/src/interface/: encryption.cpp  encryption.h
Algorithm/ALGO.PCLAlgorithmsNative/: ALGO.PCLAlgorithmsNative.vcxproj  ALGO.PCLAlgorithmsNative.vcxproj.filters
Algorithm/ALGO.PCLCoreNative/: ALGO.PCLCoreNative.vcxproj  ALGO.PCLCoreNative.vcxproj.filters
Algorithm/ALGO.VTKWrapperNative/: ALGO.VTKWrapperNative.vcxproj  ALGO.VTKWrapperNative.vcxproj.filters
Application/: AGENTS.md
Application/ReeYin.AlarmCenter/: ApplicationAlarmCenterModule.cs  ReeYin.AlarmCenter.csproj
Application/ReeYin.ProjectManeger/: ApplicationProjectManagerModule.cs  ReeYin.ProjectManager.csproj
Application/ReeYin.RecipeManager/: ApplicationRecipeManager.cs  DESIGN_SUMMARY.md  RETURN_BUTTON_SUMMARY.md  ReeYin.RecipeManager.csproj
Application/ReeYin.RootManager/: AppRootManagerModule.cs  ReeYin.RootManager.csproj
Application/ReeYin.Status/: ApplicationStatusModule.cs  ReeYin.Status.csproj
Application/ReeYin_V.Config/: ApplicationConfigModule.cs  ReeYin_V.Config.csproj
Application/ReeYin_V.Initialize/: ApplicationInitializeModule.cs  ReeYin_V.Initialize.csproj  ReeYin_V.Initialize_q0ikox4j_wpftmp.csproj
Application/ReeYin_V.License/: ApplicationLicenseModule.cs  ReeYin_V.License.csproj
Application/ReeYin_V.Login/: ApplicationLoginModule.cs  ReeYin_V.Login.csproj
Application/ReeYin_V.Main/: ApplicatoinMainModule.cs  ReeYin_V.Main.csproj
Application/ReeYin_V.NodifySolution/: ApplicationNodifySolutionModule.cs  ReeYin_V.NodifySolution.csproj  ReeYin_V.NodifySolution_tr3clcdb_wpftmp.csproj
Application/ReeYin_V.Permission/: ApplicationPermissionModule.cs  ReeYin_V.Permission.csproj  ReeYin_V.Permission_cihrtuqj_wpftmp.csproj
Application/ReeYin_V.Share/: ReeYin_V.Share.csproj  ShareModule.cs
Application/ReeYin_V.UserManager/: ApplicationUserManagerModule.cs  ReeYin_V.UserManager.csproj
Application/WpfHelper/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  WpfHelper.csproj
Core/: AGENTS.md
Core/ReeYin-V.Core/: CoreModule.cs  ReeYin_V.Core.csproj
Core/ReeYin_V.Logger/: Logs.cs  NLog.config  ReeYin_V.Logger.csproj
CustomUI/: AGENTS.md
CustomizedDemand/: AGENTS.md
GemeralUI/: AGENTS.md
Hardware/: AGENTS.md
Resource/: AGENTS.md
Semiconductor/: AGENTS.md
Shell/: AGENTS.md  App.xaml  App.xaml.cs  ReeYin_V.Shell.csproj
Tools/: AGENTS.md  Generate-WaferFlatness-Doc.ps1
scripts/: Test-Governance.Tests.ps1  Test-Governance.ps1
(+2547 files in other folders)
